force-app/main/default/objects/Maintenance_Request__c/fields/Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Amount Collected</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>