force-app/main/default/objects/Maintenance_Request__c/fields/Amount_Spent__c.field-meta.xml
<CustomField>
    <fullName>Amount_Spent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>